# Pandas-Bokeh

./: .build  .coverage  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  README_PyPI.md  README_new.md  Release_Notes.md  azure-pipelines.yml  conda_build.sh  create_github_pages.sh  description.md  index.html  index.md  markdown  pyproject.toml  setup.py  tox.ini
.github/workflows/: documentation.yml  pre-commit-check.yml  python-package.yml  python-publish.yml
.pytest_cache/v/cache/: nodeids
Documentation/: Documentation.html  Documentation.ipynb  Release Notes.md  Testdata - Verknüpfung.lnk  ToDo.md  states.geojson  test.html
Documentation/.ipynb_checkpoints/: Documentation-checkpoint.ipynb
Documentation/Testdata/Bundestagswahl/: Bundestagswahl.csv
Documentation/Testdata/airports/: airports.geojson  ne_10m_airports.README.html
Documentation/Testdata/energy/: energy.csv
Documentation/Testdata/hole_shapes/: hole_shapes.geojson
Documentation/Testdata/populated places/: populated_places.csv
Documentation/Testdata/states/: states.geojson  states_population_attribution.txt
Documentation/Tutorials/Titanic/: Discover the Titanic Dataset using Pandas-Bokeh.ipynb
Documentation/github-pages/: create_github_pages.py  make_plots.py  replace_pictures_with_Bokeh_plots.py
Tests/: Geojson.ipynb  PandasBokeh_Test.ipynb  PandasBokeh_Tests.py  Recreate Pandas.DataFrame.plot Examples.ipynb  pandas_bokeh Tests.py  requirements_test.txt  test_GeoPandasBokeh.py  test_PandasBokeh.py  test_PySpark.py  test_utils.py
Tests/Testdata/: Large_rivers.dbf  Large_rivers.prj  Large_rivers.sbn  Large_rivers.sbx  Large_rivers.shp  Large_rivers.shp.xml  Large_rivers.shx  places.shp  places.shx
docd/: genindex.html  index.html
docd/html/: search.html  searchindex.js
docd/html/_sources/: index.md.txt
docd/html/_sources/utils/Testdata/states/: states_population_attribution.txt
docd/html/utils/Testdata/populated places/: ne_10m_populated_places_simple.VERSION.html
docs/: .buildinfo  Documentation.ipynb  Release Notes.md  ToDo.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/Testdata/hole_shapes/: hole_shapes.geojson
docs/Testdata/iris/: iris.csv
docs/Testdata/populated places/: ne_10m_populated_places_simple_bigcities.geojson
docs/_sources/: index.md.txt
docs/github-pages/: apply_template_theme_to_readme.py  make_plots.py  replace_pictures_with_Bokeh_plots.py  template.html
docs/sphinx/: build_docs.sh  index.md  requirements_docs.txt
docs/sphinx/source/: conf.py
docs/sphinx/source/_static/: Images
docs/sphinx/source/utils/: Testdata  create_sphinx_index_from_readme.py  make_plots.py
docs/utils/Testdata/populated places/: ne_10m_populated_places_simple.VERSION.html
docs/utils/Testdata/states/: states_population_attribution.html
html/utils/Testdata/states/: states_population_attribution.html
pandas_bokeh/: README.md  __init__.py  base.html  base.py  geoplot.py  index.html  plot.py  utils.py
pandas_bokeh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pandas_bokeh/.ipynb_checkpoints/: README-checkpoint.md
scripts/: conda_build.sh  create_github_pages.sh  upload_to_pypi.sh
scripts/pandas-bokeh/: meta_base.yaml
